[package]
name = "vru-apns"
version = "0.1.0"
edition = "2021"
authors = ["Vladislav Melnik <vladislav.melnik@protonmail.com>"]
rust-version = "1.58.1"
license = "MIT"
repository = "https://github.com/vlad9486/vru-apns.git"
readme = "README.md"
keywords = ["apns", "apple", "async", "http2"]
categories = ["authentication", "os::macos-apis", "web-programming::http-client"]
description = "The client of Apple Push Notification service"

[dependencies]
jwt-simple = { version = "0.11.1" }
h2 = { version = "0.3.14" }
tokio-rustls = { version = "0.23.4" }
webpki-roots = { version = "0.22.5" }
http = { version = "0.2.8" }
bytes = { version = "1.2" }
tokio = { version = "1.21", features = ["rt-multi-thread", "net"] }
hex = { version = "0.4.3" }
thiserror = { version = "1.0" }
log = { version = "0.4.17" }
