[package]
name = "vru-apns"
version = "0.3.0"
edition = "2021"
authors = ["Vladislav Melnik <vladislav.melnik@protonmail.com>"]
rust-version = "1.58.1"
license = "MIT"
repository = "https://github.com/vlad9486/vru-apns.git"
readme = "README.md"
keywords = ["apns", "apple", "async", "http2"]
categories = ["authentication", "os::macos-apis", "web-programming::http-client"]
description = "The client of Apple Push Notification service"

[dependencies]
jwt-simple = { version = "0.11.9" }
h2 = { version = "0.4.0" }
tokio-rustls = { version = "0.24.1" }
webpki-roots = { version = "0.25.3" }
http = { version = "1.0" }
bytes = { version = "1.5" }
tokio = { version = "1.34", features = ["rt-multi-thread", "net"] }
hex = { version = "0.4.3" }
thiserror = { version = "1.0" }
log = { version = "0.4.20" }
